# -*- coding: utf-8 -*-
# Generated by Django 1.9.7 on 2016-07-18 16:51
from __future__ import unicode_literals

from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    dependencies = [
        ('management', '0004_auto_20160717_1234'),
    ]

    operations = [
        migrations.CreateModel(
            name='DayClosed',
            fields=[
                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('day', models.DateField(help_text=b'Fecha de inicio de la temporada', verbose_name=b'Fecha de inicio')),
                ('restaurant', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='management.Restaurant')),
            ],
            options={
                'verbose_name': 'D\xeda cerrado',
                'verbose_name_plural': 'D\xedas cerrado',
            },
        ),
        migrations.CreateModel(
            name='OpeningHours',
            fields=[
                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('weekdays', models.CharField(choices=[(b'lu', b'Lunes'), (b'ma', b'Martes'), (b'mx', b'Mi\xc3\xa9rcoles'), (b'ju', b'Jueves'), (b'vi', b'Viernes'), (b'sa', b'S\xc3\xa1bado'), (b'do', b'Domingo')], help_text=b'D\xc3\xadas de la semana en los que aplica este horario', max_length=100, verbose_name=b'D\xc3\xadas de la semana')),
            ],
            options={
                'verbose_name': 'Horas de apertura',
                'verbose_name_plural': 'Horas de apertura',
            },
        ),
        migrations.CreateModel(
            name='Season',
            fields=[
                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(blank=True, max_length=200, null=True, verbose_name=b'Nombre')),
                ('begin', models.DateField(help_text=b'Fecha de inicio de la temporada', verbose_name=b'Fecha de inicio')),
                ('end', models.DateField(help_text=b'Fecha de fin de la temporada', verbose_name=b'Fecha de fin')),
                ('restaurant', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='management.Restaurant')),
            ],
            options={
                'verbose_name': 'Temporada',
                'verbose_name_plural': 'Temporadas',
            },
        ),
        migrations.CreateModel(
            name='TimeSlot',
            fields=[
                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('begin', models.TimeField(verbose_name=b'Hora inicio')),
                ('end', models.TimeField(verbose_name=b'Hora fin')),
                ('hours', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='management.OpeningHours')),
            ],
            options={
                'verbose_name': 'Intervalo horario',
                'verbose_name_plural': 'Intervalos horarios',
            },
        ),
        migrations.AddField(
            model_name='openinghours',
            name='restaurant',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='management.Season', verbose_name=b'Temporada'),
        ),
    ]
