@startuml

'Class definitions:

class Restaurant{
    string name
    string email
}

class Address{
    string line1
    string line2
    string city
    string postal_code
    string state
    string country
}

class DayClosed{
    date day
}

class Season{
    string name
    date begin
    date end
}

enum WeekdaysEnum{
    Lunes
    Martes
    Miercoles
    Jueves
    Viernes
    Sabado
    Domingo
}

class OpeningHours{
    WeekdaysEnum weekdays
}

class TimeSlot{
    time begin
    time end
}

enum DishTypeEnum{
    Aperitivo
    Entrante
    Principal
    Postre
}

class Dish{
    string name
    string description
    float price
    datetime pub_date
    DishTypeEnum type
}

abstract class Resource{
    string title
    datetime pub_date
}

class ImageResource{
    int height
    int width
    url image
}

class VideoResource{
    url video
}

class Opinion {
    string opinion
    datetime pub_date
    float rate1
    float rate2
    float rate3
    float rate4
    float rate5
}

class RateTopic{
    string name
    int range
    float avgRate
}


'Relations:∫

Restaurant -- "*" Dish
Restaurant -- "*" Season
Restaurant -- "*" DayClosed
Restaurant -- "*" Address
Season -- "*" OpeningHours
OpeningHours -- "*" TimeSlot
Dish -- "*" Resource
Dish -- "*" Opinion
Dish -- "0..5" RateTopic

Resource <|-- ImageResource
Resource <|-- VideoResource

@enduml